Fix About Me and Education sections being cut off at the top - moved titles higher and removed negative margins

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   margin-top: -100px;
   padding-bottom: 50px;
   display: block;
+  scroll-margin-top: 120px;
 }
 
 .black-gradient {
